--- a/md-to-html-plugin/template.ejs
+++ b/md-to-html-plugin/template.ejs
@@ -4,9 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-  <meta name="generator" content="Jekyll v4.0.1">
+  <meta name="description" content="LuckRain7的书签网站 各种网站导航链接">
   <title>LuckRain7 bookmarks</title>
 
   <!-- Bootstrap core CSS -->
@@ -100,7 +98,7 @@
       .span-img {
         width: 19px;
         height: 19px;
-
+        color:  #007bff;
       }
 
       .span-img img {
@@ -121,6 +119,9 @@
 
       .list-li:hover{
         background-color: #007bff;
+      }
+      .list-li:hover .span-img {
+        color:  white;
       }
       .list-li:hover a{ 
         color: white;
@@ -149,7 +150,7 @@
             <span class="text-muted">目录</span>
             <span class="badge badge-secondary badge-pill"><%=render.length %></span>
           </h4>
-          <div class="list-group mb-3">
+          <div class="list-group mb-2">
             <% render.forEach(function(item,index){ %>
               <a href="#<%=item.title %>" class="list-group-item list-group-item-action"><%=index+1 %>、<%=item.title %></a>
             <% }); %>
@@ -157,9 +158,9 @@
           <!-- 搜索 -->
           <form class="card p-2">
             <div class="input-group">
-              <input type="text" class="form-control" placeholder="Promo code">
+              <input type="text" class="form-control" placeholder="Hello World">
               <div class="input-group-append">
-                <button type="submit" class="btn btn-secondary">Search</button>
+                <button type="submit" class="btn btn-secondary">Hello</button>
               </div>
             </div>
           </form>
@@ -185,7 +186,12 @@
                 <li class="list-li" data-toggle="tooltip" data-placement="top" title="<%=link.intro %>" >
                   <a href="<%=link.url %>" target="_blank">
                     <span class="span-img">
-                      <img src="/bookmark-check.svg" alt=""> 
+                      <!-- <img src="/bookmark-check.svg" alt="">  -->
+                      <!-- svg 书签图标 -->
+                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bookmark-check" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z"/>
+                        <path fill-rule="evenodd" d="M10.854 5.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 7.793l2.646-2.647a.5.5 0 0 1 .708 0z"/>
+                      </svg>
                     </span>
                     <span class="span-content span-content-active"><%=link.title %></span>
                   </a>
